Fix content jump

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -60,9 +60,19 @@ div#__next {
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
   }
 
-  img {
+  .profile-picture-container {
+    position: relative;
     width: 65%;
+    padding-bottom: 65%;
     border-radius: 50%;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   & > * {
